--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DateTime-Format-Oracle
-version:      0.02
+version:      0.03
 version_from: lib/DateTime/Format/Oracle.pm
 installdirs:  site
 requires:
@@ -11,4 +11,4 @@ requires:
     Test::More:                    0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+generated_by: ExtUtils::MakeMaker version 6.30_01
