--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DateTime-Format-Oracle
-version:      0.04
-version_from: lib/DateTime/Format/Oracle.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                DateTime-Format-Oracle
+version:             0.05
+abstract:            Parse and format Oracle dates and timestamps
+license:             ~
+author:              
+    - Nathan Gray <kolibrie@cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Convert::NLS_DATE_FORMAT:      0
     DateTime:                      0
     DateTime::Format::Builder:     0
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
